# cpp_pitfalls

./: CMakeLists.txt  bad_example_default_copy_constructor.cpp  constcast.cpp  default_copy_constructor.cpp  function_pointers.cpp  functors.cpp  implicit_conversion.cpp  readme.md  stdfunc.cpp
async/: CMakeLists.txt  promise_then.cpp  simpliest_async_reminder.cpp
coroutines/: CMakeLists.txt  coroutine_1.cpp  coroutine_2.cpp  coroutine_3.cpp  coroutine_4_return_void_example.cpp  coroutine_5_co_return_example.cpp  coroutine_6_timer_resume_example.cpp
dll/: CMakeLists.txt  LibClass.cpp  LibClass.h  main.cpp  runtime_load.cpp
memory/: CMakeLists.txt  raw_and_shared_ptr.cpp  shared_ptr.cpp  weak_ptr.cpp  weak_ptr_ownership.cpp
singleton/: CMakeLists.txt  bad_singleton.cpp  singleton.cpp  singleton_smart_ptrs.cpp
std_forward/: CMakeLists.txt  basic_move.cpp  forwarding.cpp  move_examples.cpp  move_forward.cpp  param_pack.cpp
std_variant/: CMakeLists.txt  basic_variant_usage.cpp  inheritance_vs_variant.cpp  variant_constructors.cpp  variant_usecase.cpp
templates/: CMakeLists.txt  basic_templates.cpp  recursive_template.cpp  type_decay.cpp
threads/: CMakeLists.txt  leetcode_foobar_alternately.cpp  leetcode_print_in_order.cpp  queued_thread_pool.cpp  thread_pool.cpp  threads.cpp
